Update 디지털 명함 생성 어플 - 김재서.md

--- a/doc/idea/디지털 명함 생성 어플 - 김재서.md
+++ b/doc/idea/디지털 명함 생성 어플 - 김재서.md
@@ -14,4 +14,4 @@
 
    ex) 아래와 같이 언어 별 선택 및 저장 음성 재생 기능을 제공
 
-   ![image-20191220102851103](./image/디지털 명함 생성 어플 - 김재서/image-20191220102851103.png)
+   ![image-20191220102851103](image/디지털%20명함%20생성%20어플%20-%20김재서/image-20191220102851103.png)
