이름 변경 및 Intent Flag 작성중

--- a/doc/4._여러_화면_간_전환하기.md
+++ b/doc/4._여러_화면_간_전환하기.md
@@ -263,9 +263,9 @@
 
     4.  작동 테스트
 
-       ![image-20191213151415267](image/4_change_activity/image-20191213151415267.png)
+       ![image-20191213151415267](image/4._여러_화면_간_전환하기/image-20191213151415267.png)
 
-       ![image-20191213151434750](image/4_change_activity/image-20191213151434750.png)
+       ![image-20191213151434750](image/4._여러_화면_간_전환하기/image-20191213151434750.png)
 
 
 
@@ -460,9 +460,9 @@
        3. 작동 테스트
 
        
-       ![image-20191217182212935](image/4_change_activity/image-20191217182212935.png)
+       ![image-20191217182212935](image/4._여러_화면_간_전환하기/image-20191217182212935.png)
        
-       ![image-20191217183057990](image/4_change_activity/image-20191217183057990.png)
+       ![image-20191217183057990](image/4._여러_화면_간_전환하기/image-20191217183057990.png)
   
   
   
@@ -474,13 +474,9 @@
 
   : flag을 이용하여 Back Stack내 액티비티의 흐름을 제어가 가능하다.
 
-  ex) FLAG_ACTIVITY_CLRAR_TOP을 사용하여 BackStack내의 액티비티의 흐름 제어 
-
-  ![image-20191220094039654](image/4_change_activity/image-20191220094039654.png)
-
 - manifest에 flag 정의 하기
 
-    [Andorid-task-and-back-stack 레퍼런스 가이드](https://developer.android.com/guide/components/activities/tasks-and-back-stack)를 보면 다양한 속성을 제공 하고 있는데 일단 자주 사용 되는 **[`launchMode`](https://developer.android.com/guide/topics/manifest/activity-element.html#lmode)**을 이용하여 정의한다.
+    [Andorid-task-and-back-stack 레퍼런스 가이드](https://developer.android.com/guide/components/activities/tasks-and-back-stack)를 보면 다양한 속성을 제공 하고 있는데 일단 자주 사용 되는 [`launchMode`](https://developer.android.com/guide/topics/manifest/activity-element.html#lmode)을 이용하여 정의한다.
 
     ```xml
     <activity android:name=".MainActivity" 
@@ -491,12 +487,24 @@
 
     1. **standard** (default)
 
-       스택중 어느곳에나 위치 가능하며 **여러개의 인스턴스가 생성가능**
+       기본입니다. 시스템이 항상 대상 작업에 새 액티비티 인스턴스를 생성하고 인텐트를 해당 인스턴스로 라우팅한다.
 
     2. **singleTop**
     
+       액티비티의 인스턴스가 이미 대상 작업의 맨 위에 존재하는 경우 시스템은 새 액티비티 인스턴스를 생성하는 대신 `onNewIntent()` 메서드를 호출하여 인텐트를 해당 인스턴스로 라우팅한다.
+    
+       ![image-20191220203128891](image/4._여러_화면_간_전환하기/image-20191220203128891.png)
+    
+    3. **singleTask**
+    
+       시스템이 새 작업의 루트에 액티비티를 생성하고 인텐트를 해당 액티비티로 라우팅한다. 그러나 액티비티 인스턴스가 이미 존재하는 경우 시스템은 새 인스턴스를 생성하는 대신 `onNewIntent()` 메서드를 호출하여 인텐트를 기존 인스턴스로 라우팅한다.
+    
+       ![image-20191220201251424](image/4._여러_화면_간_전환하기/image-20191220201251424.png)
+    
+    4.  **singleInstance**
+    
+       `singleTask`와 동일합니다. 단, 인스턴스가 있는 작업에 대해 시스템이 어떤 액티비티도 시작하지 않은 경우는 예외입니다. 액티비티는 항상 해당 작업의 단일 멤버입니다.
+    
        
     
-    3. 
-    
-    4.  
+       
