--- a/doc/학습 및 발표/여러 화면 간 전환.md
+++ b/doc/학습 및 발표/여러 화면 간 전환.md
@@ -263,9 +263,9 @@
 
     4.  작동 테스트
 
-       ![image-20191213151415267](image/4._여러_화면_간_전환하기/image-20191213151415267.png)
+       ![image-20191213151415267](image/여러%20화면%20간%20전환/image-20191213151415267.png)
 
-       ![image-20191213151434750](image/4._여러_화면_간_전환하기/image-20191213151434750.png)
+       ![image-20191213151434750](image/여러%20화면%20간%20전환/image-20191213151434750.png)
 
 
 
@@ -460,9 +460,9 @@
        3. 작동 테스트
 
        
-       ![image-20191217182212935](image/4._여러_화면_간_전환하기/image-20191217182212935.png)
+       ![image-20191217182212935](image/여러%20화면%20간%20전환/image-20191217182212935.png)
        
-       ![image-20191217183057990](image/4._여러_화면_간_전환하기/image-20191217183057990.png)
+       ![image-20191217183057990](image/여러%20화면%20간%20전환/image-20191217183057990.png)
   
   
   
@@ -487,24 +487,35 @@
 
     1. **standard** (default)
 
-       기본입니다. 시스템이 항상 대상 작업에 새 액티비티 인스턴스를 생성하고 인텐트를 해당 인스턴스로 라우팅한다.
+       기본으로 작동한다. 시스템이 항상 대상 작업에 새 액티비티 인스턴스를 생성하고 인텐트를 해당 인스턴스로 라우팅한다.
 
     2. **singleTop**
     
        액티비티의 인스턴스가 이미 대상 작업의 맨 위에 존재하는 경우 시스템은 새 액티비티 인스턴스를 생성하는 대신 `onNewIntent()` 메서드를 호출하여 인텐트를 해당 인스턴스로 라우팅한다.
     
-       ![image-20191220203128891](image/4._여러_화면_간_전환하기/image-20191220203128891.png)
+       ![image-20191220203128891](image/여러%20화면%20간%20전환/image-20191220203128891.png)
     
     3. **singleTask**
     
        시스템이 새 작업의 루트에 액티비티를 생성하고 인텐트를 해당 액티비티로 라우팅한다. 그러나 액티비티 인스턴스가 이미 존재하는 경우 시스템은 새 인스턴스를 생성하는 대신 `onNewIntent()` 메서드를 호출하여 인텐트를 기존 인스턴스로 라우팅한다.
     
-       ![image-20191220201251424](image/4._여러_화면_간_전환하기/image-20191220201251424.png)
+       ![image-20191220201251424](image/여러%20화면%20간%20전환/image-20191220201251424.png)
     
     4.  **singleInstance**
     
-       `singleTask`와 동일합니다. 단, 인스턴스가 있는 작업에 대해 시스템이 어떤 액티비티도 시작하지 않은 경우는 예외입니다. 액티비티는 항상 해당 작업의 단일 멤버입니다.
+       `singleTask`와 동일하다. 단, 인스턴스가 있는 작업에 대해 시스템이 어떤 액티비티도 시작하지 않은 경우는 예외이다. 액티비티는 항상 해당 작업의 단일 멤버이다.
     
+       ![image-20191220211109621](image/여러%20화면%20간%20전환/image-20191220211109621.png)
+       
        
     
-       
+- startActivity() 호출할 때 intent에 정의
+
+    setFlag(int), addFlag(int)을 이용하여 정의가 가능 하다.
+    ex) 
+
+    ```java
+    
+    ```
+
+    
