--- a/doc/학습 및 발표/여러 화면 간 전환.md
+++ b/doc/학습 및 발표/여러 화면 간 전환.md
@@ -404,7 +404,7 @@
 
        1.  Activity_main.xml
 
-       ```java
+       ```xml
        <?xml version="1.0" encoding="utf-8"?>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -503,19 +503,314 @@
     
     4.  **singleInstance**
     
-       `singleTask`와 동일하다. 단, 인스턴스가 있는 작업에 대해 시스템이 어떤 액티비티도 시작하지 않은 경우는 예외이다. 액티비티는 항상 해당 작업의 단일 멤버이다.
+        `singleTask`와 동일하다. 단, 인스턴스가 있는 작업에 대해 시스템이 어떤 액티비티도 시작하지 않은 경우는 예외이다. 액티비티는 항상 해당 작업의 단일 멤버이다.
     
-       ![image-20191220211109621](image/여러%20화면%20간%20전환/image-20191220211109621.png)
-       
+        ![image-20191220211109621](image/여러%20화면%20간%20전환/image-20191220211109621.png)
+    
        
     
 - startActivity() 호출할 때 intent에 정의
 
     setFlag(int), addFlag(int)을 이용하여 정의가 가능 하다.
-    ex) 
+    
+```java
+    ex)
+    @Override
+        public void startActivity(Intent intent) {
+        super.startActivity(intent);
+            intent.setFlags(Intent.FLAG_ACTIVITY_NEW_TASK);
+            //setFlags() 사용시
+            intent.addFlags(Intent.FLAG_ACTIVITY_NEW_TASK);
+        	//addFlags() 사용시
+        }  
+    ```
+    
+    여기서 사용 가능한 FLAG의 종류는 무수히 많은데 대표적으로 사용되는 FLAG에 대해서 만 설명 한다.
+    
+    더 자세한 내용은 [구글 레퍼런스 가이드 - Intent flags](https://developer.android.com/reference/android/content/Intent#flags), [인텐트 가이드](https://kairo96.gitbooks.io/android/content/ch2.8.html)를 참고
+    
+    1. [FLAG_ACTIVITY_NEW_TASK](https://developer.android.com/reference/android/content/Intent.html#FLAG_ACTIVITY_NEW_TASK)
+    
+       앞에서 설명한 `singleTask` 하고 같은 역할을 수행
+    
+    2. [FLAG_ACTIVITY_SINGLE_TOP](https://developer.android.com/reference/android/content/Intent.html#FLAG_ACTIVITY_SINGLE_TOP)
+    
+       앞에서 설명한 `singleTop` 하고 같은 역할을 수행
+    
+    3. [FLAG_ACTIVITY_CLEAR_TOP](https://developer.android.com/reference/android/content/Intent.html#FLAG_ACTIVITY_CLEAR_TOP)
+    
+       시작 중인 활동이 현재 작업에서 이미 실행 중이면 활동의 새 인스턴스가 실행되는 대신 작업의 맨 위에 있는 다른 모든 활동이 제거되고 이 인텐트가 `onNewIntent()`를 통해 활동(이제 맨 위에 있음)의 다시 시작된 인스턴스로 전달된다.
+    
+       `FLAG_ACTIVITY_CLEAR_TOP`은 `FLAG_ACTIVITY_NEW_TASK`와 함께 가장 자주 사용된다. 이러한 플래그를 함께 사용하면 또 다른 작업에 있는 기존 활동을 찾아 인텐트에 응답할 수 있는 위치에 활동을 넣을 수 있다.
+    
+       > **참고:** 지정된 활동의 실행 모드가 `"standard"`이면 이 활동도 스택에서 삭제되고 대신 새 인스턴스가 실행되어 수신 인텐트를 처리한다. 실행 모드가 `"standard"`이면 새 인텐트에 대해 항상 새 인스턴스가 생성되기 때문이다.
+    
+       ![image-20191220223430289](image/여러%20화면%20간%20전환/image-20191220223430289.png)
+    
+- Intent 부가데이터
+
+    : 액티비티 간에 데이터를 전달하기 위해 사용한다. 부가데이터는 intent 객체 내부에 존재 하기 때문에 putXXX(), getXXX()와 같은 함수를 이용해 데이터를 전달하거나 받을 수 있다.
 
     ```java
-    
+    ex)
+    @Override
+    public void startActivity(Intent intent) {
+        super.startActivity(intent);
+        String test = intent.getStringExtra("test");
+        //get으로 String 데이터 test를 받음
+        intent.putExtra("test",test);
+        //put으로 다시 test라는 이름을 달아서 test를 전달
+    }
     ```
 
-    
+- Intent 데이터 Activity 종료 후 받기
+
+  : Activity가 종료되고 BackStack에 저장된 이전 Activity가 Intent 데이터를 받아 처리를 해야 한다면 `onActivityResult()` 함수를 통해 결과 값을 받아 처리를 할 수 있다.
+
+  `startActivity()` 함수를 통해 Activity을 시작할 수 있지만 `onActivityResult()` 에서 Activity 구분을 위해 `startActivityForResult()` 함수를 통해 intent와 int requestCode을 전달 함으로 `onActivityResult()` 에서 requestCode을 통해 Acrivity을 구분할 수 있다. 또한 결과 값을 전달할 때에는 `setResult()` 함수를 이용하여 미리 상수로 정한 `RESULT_OK` 과 같은 resultcode을 전달함으로 정상적인 요청 인지에 대해 확인이 가능하다. 
+
+  ```java
+  ex)
+  //Activity 구분을 위한 상수로 선언
+  final int TEST_ACTIVITY_1 = 1;
+  final int TEST_ACTIVITY_2 = 2;
+  
+  @Override
+  protected void onActivityResult(int requestCode, int resultCode, @Nullable Intent data) {
+      super.onActivityResult(requestCode, resultCode, data);
+      //응답값에 대해 일단 resultCode를 통해 구분
+      if (resultCode==RESULT_OK){
+          //requestCode를 통해 Activity를 구분
+          if(requestCode==TEST_ACTIVITY_1){
+              String test = data.getStringExtra("test");
+              textView.setText(test);
+          }else if(requestCode==TEST_ACTIVITY_1)
+          	String test = data.getStringExtra("test");
+  			Toast.makeText(getApplicationContext(),
+                             test,Toast.LENGTH_SHORT).show();
+      }else (resultCode==RESULT_CANCELED){
+  			Toast.makeText(getApplicationContext(),
+                             "test1 취소",Toast.LENGTH_SHORT).show();
+          }else if(requestCode==TEST_ACTIVITY_1)
+  			Toast.makeText(getApplicationContext(),
+                             "test2 취소",Toast.LENGTH_SHORT).show();
+      }
+  }
+  ```
+
+  작동 예제 코드
+
+  1. activity_main.xml
+
+     ```xml
+     <?xml version="1.0" encoding="utf-8"?>
+     <LinearLayout
+         xmlns:android="http://schemas.android.com/apk/res/android"
+         xmlns:tools="http://schemas.android.com/tools"
+         android:layout_width="match_parent"
+         android:layout_height="match_parent"
+         android:orientation="vertical"
+         tools:context=".MainActivity">
+     
+         <Button
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:text="New Intent!"
+             android:id="@+id/btnNewIntent"/>
+     
+         <EditText
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:hint="전달할 데이터를 작성하세요."
+             android:id="@+id/etMain"/>
+     
+         <TextView
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:textSize="50sp"
+             android:text="받은 데이터 없음"
+             android:id="@+id/tvMain"/>
+     </LinearLayout>
+     ```
+
+  2. activity_test.xml
+
+     ```xml
+     <?xml version="1.0" encoding="utf-8"?>
+     <LinearLayout
+         xmlns:android="http://schemas.android.com/apk/res/android"
+         android:layout_width="match_parent"
+         android:layout_height="match_parent"
+         android:orientation="vertical">
+     
+         <EditText
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:hint="전달할 데이터를 작성하세요."
+             android:id="@+id/etTest"/>
+     
+         <TextView
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:textSize="50sp"
+             android:text="받은 데이터 없음"
+             android:id="@+id/tvTest"/>
+         <Button
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:text="goback"
+             android:id="@+id/btnBack"/>
+     
+     </LinearLayout>
+     ```
+
+  3. MainActivity.java
+
+     ```java
+     package dev.jaeseokim.androidstudy;
+     
+     import androidx.annotation.Nullable;
+     import androidx.appcompat.app.AppCompatActivity;
+     
+     import android.content.Intent;
+     import android.os.Bundle;
+     import android.view.View;
+     import android.widget.Button;
+     import android.widget.EditText;
+     import android.widget.TextView;
+     
+     public class MainActivity extends AppCompatActivity {
+     
+         EditText editText;
+         TextView textView;
+         final int TEST_ACTIVITY = 0;
+     
+         @Override
+         protected void onCreate(Bundle savedInstanceState) {
+             super.onCreate(savedInstanceState);
+             setContentView(R.layout.activity_main);
+             Button newIntent = (Button) findViewById(R.id.btnNewIntent);
+             editText = (EditText) findViewById(R.id.etMain);
+             textView = (TextView) findViewById(R.id.tvMain);
+             newIntent.setOnClickListener(new View.OnClickListener() {
+                 @Override
+                 public void onClick(View v) {
+                     Intent intent = new Intent(getApplicationContext(),TestActivity.class);
+                     intent.putExtra("main",editText.getText().toString());
+                     startActivityForResult(intent,TEST_ACTIVITY);
+     
+                 }
+             });
+         }
+     
+     
+         @Override
+         protected void onActivityResult(int requestCode, int resultCode, @Nullable Intent data) {
+             super.onActivityResult(requestCode, resultCode, data);
+             if (resultCode==RESULT_OK){
+                 if(requestCode==TEST_ACTIVITY){
+                     String test = data.getStringExtra("test");
+                     if (!test.equals("")) {
+                         textView.setText(test);
+                     }
+                 }
+             }
+         }
+     
+     }
+     ```
+
+  4. TestActivitiy.java
+
+     ```java
+     package dev.jaeseokim.androidstudy;
+     
+     import android.content.Intent;
+     import android.os.Bundle;
+     import android.util.Log;
+     import android.view.View;
+     import android.widget.Button;
+     import android.widget.EditText;
+     import android.widget.TextView;
+     
+     import androidx.annotation.Nullable;
+     import androidx.appcompat.app.AppCompatActivity;
+     
+     
+     public class TestActivity extends AppCompatActivity {
+     
+         EditText editText;
+         TextView textView;
+         Button button;
+         Intent intent;
+         @Override
+         protected void onCreate(@Nullable Bundle savedInstanceState) {
+             super.onCreate(savedInstanceState);
+             setContentView(R.layout.activity_test);
+             intent = getIntent();
+             editText = (EditText) findViewById(R.id.etTest);
+             textView = (TextView) findViewById(R.id.tvTest);
+             button = (Button) findViewById(R.id.btnBack);
+             button.setOnClickListener(new View.OnClickListener() {
+                 @Override
+                 public void onClick(View v) {
+                     intent.putExtra("test",editText.getText().toString());
+                     setResult(RESULT_OK,intent);
+                     finish();
+                 }
+             });
+             String main = intent.getStringExtra("main");
+             if (!main.equals("")){
+                 textView.setText(main);
+             }
+         }
+     
+         @Override
+         public void onBackPressed() {
+             intent.putExtra("test",editText.getText().toString());
+             Log.d("onPause",editText.getText().toString());
+             setResult(RESULT_OK,intent);
+             super.onBackPressed();
+         }
+     
+     }
+     ```
+
+  5. AndroidManifestxml
+
+     ```xml
+     <?xml version="1.0" encoding="utf-8"?>
+     <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+         package="dev.jaeseokim.androidstudy">
+     
+         <application
+             android:allowBackup="true"
+             android:icon="@mipmap/ic_launcher"
+             android:label="@string/app_name"
+             android:roundIcon="@mipmap/ic_launcher_round"
+             android:supportsRtl="true"
+             android:theme="@style/AppTheme">
+             <activity android:name=".MainActivity"
+                 android:launchMode="singleTop">
+                 <intent-filter>
+                     <action android:name="android.intent.action.MAIN" />
+                     <category android:name="android.intent.category.LAUNCHER" />
+                 </intent-filter>
+             </activity>
+             <activity android:name=".TestActivity"/>
+         </application>
+     </manifest>
+     ```
+
+  6. 작동 테스트
+
+     ![image-20191222233056441](image/여러%20화면%20간%20전환/image-20191222233056441.png)
+
+     ![image-20191222233246900](image/여러%20화면%20간%20전환/image-20191222233246900.png)
+
+     ![image-20191222233257565](image/여러%20화면%20간%20전환/image-20191222233257565.png)
+
+     ![image-20191222233312761](image/여러%20화면%20간%20전환/image-20191222233312761.png)
+
+     
+
